src/FinancialForce ClickLink/objects/IntegrationRuleJob__c.object
<CustomObject>
    <customHelpPage>helpintegrationrulejob</customHelpPage>
    <fields>
        <fullName>IntegrationRule__c</fullName>
        <label>ClickLink Rule</label>
        <referenceTo>IntegrationRule__c</referenceTo>
        <relationshipLabel>ClickLink Jobs</relationshipLabel>
        <relationshipName>IntegrationRuleJobs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ListViewName__c</fullName>
        <label>List View Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ListViewObject__c</fullName>
        <label>List Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ListViewSourceIDField__c</fullName>
        <label>List Object Source ID Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScheduledApexJobCronExpression__c</fullName>
        <label>Scheduled Apex Job Cron Expression</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScheduledApexJobID__c</fullName>
        <label>Scheduled Apex Job ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>ClickLink Job</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ClickLink Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>